--- a/tryy.yml
+++ b/tryy.yml
@@ -195,5 +195,246 @@ Resources:
             SubnetId: !Ref PrivateSub2
             RouteTableId: !Ref PrivateRouteTable2
 
+## Elastic Load Balancer ##
+    LoadBalancer:
+        Type: AWS::ElasticLoadBalancingV2::LoadBalancer
+        Properties:
+            Subnets:
+                - Ref: PublicSub1
+                - Ref: PublicSub2
+            SecurityGroups:
+                - Ref: WebSecurityGroup
+            HealthCheck:
+                Target: HTTP:80/
+                HealthyThreshold: '3'
+                UnhealthyThreshold: '5'
+                Interval: '30'
+                Timeout: '5'
+            Tags:
+                - Key: Name
+                  Value: !Sub ${EnvironmentName}-lb
+
+    LoadBalancerListener:
+        Type: AWS::ElasticLoadBalancingV2::Listener
+        Properties:
+            LoadBalancerArn: !Ref LoadBalancer
+            DefaultActions:
+                - Type: forward
+                  TargetGroupArn: !Ref WebServerTargetGroup
+            Port: 80
+            Protocol: HTTP
+
+
+    WebServerTargetGroup:
+        Type: AWS::ElasticLoadBalancingV2::TargetGroup
+        Properties:
+            TargetType: instance
+            Tags:
+                - Key: Name
+                  Value: !Sub ${EnvironmentName}-web-server-tg
+            HealthCheckIntervalSeconds: 35
+            HealthCheckPath: /
+            HealthCheckProtocol: HTTP
+            HealthCheckTimeoutSeconds: 30
+            HealthyThresholdCount: 2
+            Port: 80
+            Protocol: HTTP
+            UnhealthyThresholdCount: 5
+            VpcId: !Ref 'VPC'
+
+##  Bastion ##
+    BastionNode:
+        Type: AWS::EC2::Instance
+        Properties:
+            BlockDeviceMappings:
+                - DeviceName: "/dev/sda1"
+                - Ebs:
+                    VolumeSize: 24
+                    VolumeType: gp2
+            Tags:
+                - Key: Name
+                  Value: !Sub ${EnvironmentName}-bastion
+            ImageId: ami-06f2f779464715dc5
+            InstanceType: t2.micro
+            SubnetId:
+                Ref: PublicSub1
+            AvailabilityZone: !Select [ 0, !GetAZs '' ]
+            SecurityGroupIds:
+                - Ref: BastionSecurityGroup  
+        DependsOn:
+            - BastionSecurityGroup
+            - PublicSub1
+
+## Security Groups ##
+    BastionSecurityGroup:
+        Type: AWS::EC2::SecurityGroup
+        Properties:
+            GroupDescription: Security Group for Bastion Node
+            VpcId: !Ref 'VPC'
+            GroupDescription: Bastion security group
+            SecurityGroupIngress:
+                - CidrIp: 0.0.0.0/0
+                  IpProtocol: tcp
+                  FromPort: 22
+                  ToPort: 22
+            Tags:
+                -   Key: Name
+                    Value: !Sub ${EnvironmentName}-bastion-sg
+
+    WebSecurityGroup:
+        Type: AWS::EC2::SecurityGroup
+        Properties:
+            VpcId: !Ref 'VPC'
+            GroupDescription: Web Server security group
+            SecurityGroupIngress:
+                - SourceSecurityGroupId: !Ref BastionSecurityGroup
+                  IpProtocol: tcp
+                  FromPort: 22
+                  ToPort: 22
+                - CidrIp: 0.0.0.0/0
+                  IpProtocol: tcp
+                  FromPort: 80
+                  ToPort: 80
+            Tags:
+                -   Key: Name
+                    Value: !Sub ${EnvironmentName}-web-server-sg
+                   
+## Web Servers Auto Scaling and Launch Config ##
+    WebServerAutoScalingGroup:
+        Type: AWS::AutoScaling::AutoScalingGroup
+        Properties:
+            Cooldown: 300
+            TargetGroupARNs:
+                - !Ref WebServerTargetGroup
+            VPCZoneIdentifier:
+                - Ref: "PrivateSub1"
+                - Ref: "PrivateSub2"
+            MetricsCollection: 
+                Granularity: "1Minute"
+            Metrics: 
+                - "GroupMinSize"
+                - "GroupMaxSize"
+            LaunchConfigurationName:
+                Ref: "WebServerLaunchConfig"
+            MinSize: "3"
+            MaxSize: "5"
+            Tags:
+                - Key: Environment
+                  Value: !Sub ${EnvironmentName}-web-server-asg
+                  PropagateAtLaunch: "true"
+
+    WebServerLaunchConfig:
+        Type: AWS::AutoScaling::LaunchConfiguration
+        Properties:
+            UserData:
+            Fn::Base64: !Sub |
+                #!/bin/bash
+                apt-get update -y
+                apt-get install unzip awscli -y
+                apt-get install apache2 -y
+                systemctl start apache2
+                cd /var/www/html
+                aws s3 cp s3://udacity-clouddevops/code.zip .
+                unzip -o code.zip
+                cp code/index.html .
+                chown -R www-data:www-data .
+            ImageId: ami-06f2f779464715dc5
+            IamInstanceProfile:
+                Ref: S3BucketInstanceProfile
+            InstanceType: t2.micro
+            BlockDeviceMappings:
+                - DeviceName: "/dev/sda1"
+                Ebs:
+                    VolumeSize: 24
+                    VolumeType: gp2
+            SecurityGroups:
+                - Ref: WebSecurityGroup
+
+
+## s3 bucket policy ##    
+    S3BucketsPolicy:
+        Type: AWS::IAM::Policy
+        Properties:
+            PolicyName: S3BucketsPolicy
+            PolicyDocument:
+                Version: '2012-10-17'
+                Statement:
+                    - Effect: Allow
+                    Action:
+                        - s3:List*
+                        Resource: "*"
+            Roles:
+                - Ref: S3BucketsRole
+
+    S3BucketsRole:
+        Type: AWS::IAM::Role
+        Properties:
+            ManagedPolicyArns:
+                - "arn:aws:iam::aws:policy/AmazonS3FullAccess"
+            AssumeRolePolicyDocument:
+                Version: '2012-10-17'
+                Statement:
+                    - Effect: Allow
+                        Principal:
+                        Service:
+                        - ec2.amazonaws.com
+                        Action:
+                        - sts:AssumeRole
+            Path: "/"
+
+    S3BucketInstanceProfile:
+        Type: AWS::IAM::InstanceProfile
+        Properties:
+            Roles:
+                - Ref: S3BucketsRole
+
+
+Outputs:
+    VPC:
+      Description: AWS VPC ID
+      Value: !Ref VPC
+      Export:
+        Name: !Sub "${AWS::StackName}-VPCID"
+    PrivateSub1:
+      Description: Private Subnet 1
+      Value: !Ref PrivateSubnet1CIDR
+      Export:
+        Name: !Sub "${AWS::StackName}-PRIVSUBNET1"
+    PrivateSub2:
+      Description: Private Subnet 2
+      Value: !Ref PrivateSubnet2CIDR
+      Export:
+        Name: !Sub "${AWS::StackName}-PRIVSUBNET2"
+    PublicSub1:
+      Description: Public Subnet 1
+      Value: !Ref PublicSubnet1CIDR
+      Export:
+        Name: !Sub "${AWS::StackName}-PUBSUBNET1"
+    PublicSub2:
+      Description: Public Subnet 2
+      Value: !Ref PublicSubnet2CIDR
+      Export:
+        Name: !Sub "${AWS::StackName}-PUBSUBNET2"
+    StackIGW:
+      Description: Stack IGW ID
+      Value: !Ref InternetGateway
+      Export:
+        Name: !Sub "${AWS::StackName}-IGW"
+    BastionIP:
+      Description: Bastion Public IP
+      Value: !GetAtt BastionNode.PublicIp
+      Export:
+        Name: !Sub "${AWS::StackName}-bastion-public-ip"
+    BastionDNS:
+      Description: Bastion DNS
+      Value: !GetAtt BastionNode.PublicDnsName
+      Export:
+        Name: !Sub "${AWS::StackName}-bastion-public-dns"
+    LoadBalancerDNS:
+      Description: LoadBalancer DNS
+      Value: !Join [ "", [ "http://", !GetAtt LoadBalancer.DNSName ] ]
+      Export:
+        Name: !Sub "${AWS::StackName}-lb-dns"
+
 
     
