--- a/server.yml
+++ b/server.yml
@@ -366,19 +366,20 @@ Resources:
         Properties:
             UserData:
                 Fn::Base64: !Sub |
-                    #!/bin/bash
-                    apt-get update -y
-                    apt-get install unzip awscli -y
-                    apt-get install apache2 -y
-                    systemctl start apache2.service
+                   #!/bin/bash
+                    apt-get -y  update
+                    apt-get -y install unzip awscli
+                    apt-get -y install apache2
+                    systemctl start apache2
                     cd /var/www/html
-                    aws s3 cp s3://deploy-iac-udagram/Udagram.zip .
-                    unzip -o Udagram.zip
-                    
+                    chmod 755 /var/www/html
+                    wget https://deploy-iac-udagram.s3-us-west-2.amazonaws.com/Udagram.zip
+                    tar -xzvf Udagram.zip
+                    chown -R www-data:www-data .
             ImageId: ami-06f2f779464715dc5
             IamInstanceProfile:
                 Ref: S3BucketInstanceProfile
-            InstanceType: t2.micro
+            InstanceType: t2.small
             BlockDeviceMappings:
                 - DeviceName: "/dev/sda1"
                   Ebs:
